static/index.css
:root {
  --common: grey;
  --dark-bg: #131516;
  --dark-fg: #98a3ad;
  --epic: darkorchid;
  --legendary: gold;
  --light-bg: #292c2f;
  --light-fg: #a1adb8;
  --link: #4169e1;
  --mythic: #f2a900;
  --rare: cornflowerblue;
  --search-bg: #b7b7b7;
  --search-border: #aaaaaa;
  --search-fg: #000000;
  --uncommon: forestgreen;
}

html {
  background-color: var(--dark-bg);
  color: var(--dark-fg);
}

main {
  margin: 0 auto 0 auto;
  padding: 0 1rem 0 1rem;
  max-width: 100%;
  width: 50rem;
}

h1 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  width: 100%;
}

iframe {
  aspect-ratio: 1 / 1;
  border: none;
  pointer-events: none;
}

a {
  color: var(--link);
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

a:visited {
  color: var(--link);
}

dt {
  font-weight: bold;
  margin-top: 0.5rem;
}

nav {
  align-items: center;
  background-color: var(--light-bg);
  display: flex;
  gap: 1rem;
  padding: 1rem;
}

nav > :first-child {
  color: var(--light-fg);
  font-weight: bold;
}

form {
  display: flex;
  flex-grow: 1;
  gap: 1rem;
  margin-left: auto;
  width: 100%;
}

input[type=text] {
  background-color: var(--search-bg);
  border-radius: 3px;
  border: 1px solid var(--search-border);
  color: var(--search-fg);
  flex-grow: 1;
  min-width: 0;
}

@media (max-width: 38rem) {
  nav {
    flex-direction: column;
  }
}

.blocks {
  font-family: monospace, monospace;
  list-style-position: inside;
  padding-inline-start: 0;
  white-space: nowrap;
}

.center {
  text-align: center;
}

.monospace {
  font-family: monospace, monospace;
}

.data {
  font-family: monospace, monospace;
  overflow-wrap: break-word;
}

span.common, span.uncommon, span.rare, span.epic, span.legendary, span.mythic {
  border-radius: 0.25rem;
  color: white;
  padding: 0.125rem 0.25rem 0.125rem 0.25rem;
}

span.common {
  background-color: var(--common);
}

span.uncommon {
  background-color: var(--uncommon);
}

span.rare {
  background-color: var(--rare);
}

span.epic {
  background-color: var(--epic);
}

span.legendary {
  background-color: var(--legendary);
}

span.mythic {
  background-color: var(--mythic);
}

a.common {
  color: var(--common);
}

a.uncommon {
  color: var(--uncommon);
}

a.rare {
  color: var(--rare);
}

a.epic {
  color: var(--epic);
}

a.legendary {
  color: var(--legendary);
}

a.mythic {
  color: var(--mythic);
}

.inscriptions {
  display: flex;
  flex-wrap: wrap;
}

.inscriptions > a {
  border-radius: 2%;
  margin: 1%;
  overflow: hidden;
  width: 23%;
}

.inscriptions iframe {
  height: 101%;
  overflow: hidden;
  width: 101%;
}

.inscription {
  display: flex;
  justify-content: center;
  align-items: stretch;
}

.inscription > *:nth-child(1), .inscription > *:nth-child(3) {
  color: var(--dark-fg);
  flex-grow: 1;
  font-size: 200%;
  text-decoration: none;
  display: flex;
  justify-content: center;
  align-items: center;
  opacity: 0;
}

.inscription > *:nth-child(1):hover, .inscription > *:nth-child(3):hover {
  opacity: 1;
}

.inscription > *:nth-child(2) {
  flex-grow: 2;
}

.inscription > a > iframe {
  width: 100%;
}

